--- a/ca2-sem1/ca2.ipynb
+++ b/ca2-sem1/ca2.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "75937b4e-3731-42ff-9f55-17ea72d070e6",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,8 @@
     "import plotly.graph_objects as go\n",
     "import plotly.tools as tls\n",
     "from plotly.subplots import make_subplots\n",
+    "\n",
+    "from prophet.serialize import model_from_json\n",
     "\n",
     "import ipywidgets as widgets\n",
     "from ipywidgets import interact, interact_manual\n",
@@ -924,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "6b5fecc6",
    "metadata": {},
    "outputs": [
@@ -936,7 +938,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -946,7 +948,7 @@
        "array(['Barley', 'Oats', 'Potatoes', 'Wheat'], dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -962,7 +964,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4197,7 +4199,8 @@
     "with open('prophet_models/Production_Austria_Oats.json', 'r') as fin:\n",
     "    m = model_from_json(fin.read())  # Load model\n",
     "    res = m.predict(pd.DataFrame([2024], columns=['ds']))\n",
-    "    print(res)"
+    "    print(res)\n",
+    "    "
    ]
   },
   {
@@ -8325,7 +8328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 41,
+   "id": "fbd89357",
    "metadata": {},
    "outputs": [
     {
@@ -8333,10 +8337,10 @@
      "output_type": "stream",
      "text": [
       "          ds          trend    yhat_lower    yhat_upper    trend_lower  \\\n",
-      "0 2024-01-01 -416415.544657 -37544.333111  21740.129097 -416507.099841   \n",
+      "0 2024-01-01 -416415.544657 -37268.933657  18616.603992 -416488.396558   \n",
       "\n",
       "     trend_upper  additive_terms  additive_terms_lower  additive_terms_upper  \\\n",
-      "0 -416333.647436   408292.099727         408292.099727         408292.099727   \n",
+      "0 -416348.569831   408292.099727         408292.099727         408292.099727   \n",
       "\n",
       "          yearly   yearly_lower   yearly_upper  multiplicative_terms  \\\n",
       "0  408292.099727  408292.099727  408292.099727                   0.0   \n",
@@ -8347,11 +8351,9 @@
     }
    ],
    "source": [
-    "# Models do not need to be re-trained every time, they can be loaded into memory or restored on demand and loaded into Propher objects in memory\n",
-    "with open('prophet_models/Production_Austria_Oats.json', 'r') as fin:\n",
-    "    m = model_from_json(fin.read())  # Load model\n",
-    "    res = m.predict(pd.DataFrame([2024], columns=['ds']))\n",
-    "    print(res)"
+    "m = TRAINED_MODELS['Production_Austria_Oats']\n",
+    "res = m.predict(pd.DataFrame([2024], columns=['ds']))\n",
+    "print(res)"
    ]
   },
   {
