--- a/ca2-sem1/dashboards.ipynb
+++ b/ca2-sem1/dashboards.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4           224.0       256.0  11429.0  Austria          AUT  AUT  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "4     50-75%  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,19 +322,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "IMPORTANT: Please open in your browser at localhost:{PORT} to view the dashboard as when it would be deployed \n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PORT = 8078"
+    "MODELS_LOADED_IN = utils.load_in_prophet_models('prophet_models')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### IMPORTANT: Please open in your browser at localhost:{PORT} to view the dashboard as when it would be deployed \n",
+    "\n",
+    "for example localhost:8078\n"
    ]
   },
   {
@@ -348,9 +350,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    \n",
+    "    \n",
+    "def create_map(df, crop, metric):\n",
+    "    data = df[df.item == crop]\n",
+    "   \n",
+    "    fig = px.choropleth(data,\n",
+    "        locations='Code',\n",
+    "        color=metric,\n",
+    "        animation_frame=\"year\",\n",
+    "        hover_name='area'\n",
+    "    )\n",
+    "    \n",
+    "    fig.update_layout(\n",
+    "        title=dict(\n",
+    "            text='Crops',\n",
+    "            x=.5,\n",
+    "            font_size=18,\n",
+    "            ),\n",
+    "    \n",
+    "        geo=dict(bgcolor='#8ad6ff', lakecolor='#8ad6ff', projection_type='miller', scope='europe'),\n",
+    "        \n",
+    "        width = 500,\n",
+    "        height = 500,\n",
+    "        coloraxis=dict(colorscale=\"Reds\", cmin=data[metric].min(), cmax=data[metric].max())\n",
+    "    )\n",
+    "\n",
+    "    fig.layout.updatemenus[0].buttons[0].args[1][\"frame\"][\"duration\"] = 60\n",
+    "\n",
+    "    return fig\n",
+    "\n",
+    "\n",
+    "def predict_and_graph(df, item, metric, area, predict):\n",
+    "    data = df[(df.area == area) & (df.item == item)].reset_index().sort_values(by='year')\n",
+    "    \n",
+    "    n = f'{metric}_{area}_{item}'\n",
+    "    model = MODELS_LOADED_IN[n]\n",
+    "\n",
+    "    if not model:\n",
+    "        print('could not load in model')\n",
+    "    \n",
+    "    predict = list(range(predict[0], predict[1]+1))\n",
+    "    predict = data.year.unique().tolist() + predict\n",
+    "\n",
+    "    forecast = model.predict(pd.DataFrame(predict, columns=['ds']))    \n",
+    "\n",
+    "    trace = go.Scatter(\n",
+    "        name = 'Actual',\n",
+    "        mode = 'markers',\n",
+    "        x = list(forecast['ds']),\n",
+    "        y = list(data[metric]),\n",
+    "        marker=dict(\n",
+    "            color='#FFBAD2',\n",
+    "            line=dict(width=1)\n",
+    "        )\n",
+    "   )\n",
+    "    \n",
+    "    trace1 = go.Scatter(\n",
+    "        name = 'Predicted Trend',\n",
+    "        mode = 'lines',\n",
+    "        x = list(forecast['ds']),\n",
+    "        y = list(forecast['yhat']),\n",
+    "        marker=dict(\n",
+    "            color='red',\n",
+    "            line=dict(width=3)\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "    upper_band = go.Scatter(\n",
+    "        name = 'upper band',\n",
+    "        mode = 'lines',\n",
+    "        x = list(forecast['ds']),\n",
+    "        y = list(forecast['yhat_upper']),\n",
+    "        line= dict(color='#57b88f'),\n",
+    "            fill = 'tonexty'\n",
+    "    )\n",
+    "\n",
+    "    lower_band = go.Scatter(\n",
+    "        name= 'lower band',\n",
+    "        mode = 'lines',\n",
+    "        x = list(forecast['ds']),\n",
+    "        y = list(forecast['yhat_lower']),\n",
+    "        line= dict(color='#1705ff')\n",
+    "    )\n",
+    "\n",
+    "    data = [trace1, lower_band, upper_band, trace]\n",
+    "\n",
+    "    layout = dict(title=f'{item} in {area} {metric} estimates Using Meta Prophet univariate model',\n",
+    "             xaxis=dict(title = 'Dates', ticklen=2, zeroline=True))\n",
+    "\n",
+    "    figure=dict(data=data,layout=layout)\n",
+    "\n",
+    "    return figure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------------------------------------\n",
+      "DuplicateIdError                          Traceback (most recent call last)\n",
+      "DuplicateIdError: Duplicate component id found in the initial layout: `metric`\n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -366,7 +478,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12abe5bd0>"
+       "<IPython.lib.display.IFrame at 0x12c116810>"
       ]
      },
      "metadata": {},
@@ -374,70 +486,74 @@
     }
    ],
    "source": [
+    "PORT = 8078\n",
+    "\n",
     "# Some bootstrap CSS \n",
     "app = Dash(__name__, external_stylesheets=[dbc.themes.ZEPHYR])\n",
     "\n",
     "app.layout = dbc.Container([\n",
     "    # Geoplot dropdows & graph\n",
-    "    dbc.Row([\n",
-    "        dbc.Col([\n",
-    "            html.H3(\n",
-    "                children=\"EU-wide performance for selected crop & metric\",\n",
-    "                className=\"main_title\",\n",
-    "            ),\n",
-    "            dbc.Card([\n",
-    "                dcc.Dropdown(\n",
-    "                    id=\"crop\",\n",
-    "                    options=crop_df.item.unique(),\n",
-    "                    value=\"Barley\",\n",
+    "    dbc.Card([  \n",
+    "        dbc.Row([\n",
+    "            dbc.Col([\n",
+    "                html.H3(\n",
+    "                    children=\"EU-wide performance for selected crop & metric\",\n",
+    "                    className=\"main_title\",\n",
     "                ),\n",
-    "                dcc.Dropdown(\n",
-    "                    id=\"metric\",\n",
-    "                    options=['Area Harvested', 'Production', 'Yield'],\n",
-    "                    value=\"Production\",\n",
+    "                dbc.Card([\n",
+    "                    dcc.Dropdown(\n",
+    "                        id=\"crop\",\n",
+    "                        options=crop_df.item.unique(),\n",
+    "                        value=\"Barley\",\n",
+    "                    ),\n",
+    "                    dcc.Dropdown(\n",
+    "                        id=\"metric\",\n",
+    "                        options=['Area Harvested', 'Production', 'Yield'],\n",
+    "                        value=\"Production\",\n",
+    "                    ),\n",
+    "                ]),\n",
+    "                dcc.Graph(id=\"crop-eu-map\"),\n",
+    "            ]),\n",
+    "            # Stats dropdowns & Graphs\n",
+    "            dbc.Col([   \n",
+    "                html.H3(\n",
+    "                    children=\"Statistical testing for differences between crop results in EU countries\",\n",
+    "                    className=\"main_title\",\n",
     "                ),\n",
+    "                dbc.Row([ \n",
+    "                    dbc.Col(\n",
+    "                    dcc.Dropdown(\n",
+    "                        id=\"stats-area1\",\n",
+    "                        options=crop_df.area.unique(),\n",
+    "                        value=\"Ireland\",\n",
+    "                    )),\n",
+    "                    dbc.Col(\n",
+    "                    dcc.Dropdown(\n",
+    "                        id=\"stats-area2\",\n",
+    "                        options=crop_df.area.unique(),\n",
+    "                        value=\"Sweden\",\n",
+    "                    )),\n",
+    "                    dbc.Col(\n",
+    "                    dcc.Dropdown(\n",
+    "                        id=\"stats-crop\",\n",
+    "                        options=crop_df.item.unique(),\n",
+    "                        value=\"Barley\",\n",
+    "                    )),\n",
+    "                    dbc.Col(\n",
+    "                    dcc.Dropdown(\n",
+    "                        id=\"stats-metric\",\n",
+    "                        options=['Area Harvested', 'Production', 'Yield'],\n",
+    "                        value=\"Production\",\n",
+    "                    )),\n",
+    "                    dbc.Col(\n",
+    "                    dcc.Dropdown(\n",
+    "                        id=\"stats-year\",\n",
+    "                        options=crop_df.year.unique(),\n",
+    "                        value=1961,\n",
+    "                    )),\n",
+    "                ]),\n",
+    "                html.Div(id=\"stats-result\"),\n",
     "            ]),\n",
-    "            dcc.Graph(id=\"crop-eu-map\"),\n",
-    "        ]),\n",
-    "        # Stats dropdowns & Graphs\n",
-    "        dbc.Col([   \n",
-    "            html.H3(\n",
-    "                children=\"Statistical testing for differences between crop results in EU countries\",\n",
-    "                className=\"main_title\",\n",
-    "            ),\n",
-    "            dbc.Row([ \n",
-    "                dbc.Col(\n",
-    "                dcc.Dropdown(\n",
-    "                    id=\"stats-area1\",\n",
-    "                    options=crop_df.area.unique(),\n",
-    "                    value=\"Ireland\",\n",
-    "                )),\n",
-    "                dbc.Col(\n",
-    "                dcc.Dropdown(\n",
-    "                    id=\"stats-area2\",\n",
-    "                    options=crop_df.area.unique(),\n",
-    "                    value=\"Sweden\",\n",
-    "                )),\n",
-    "                dbc.Col(\n",
-    "                dcc.Dropdown(\n",
-    "                    id=\"stats-crop\",\n",
-    "                    options=crop_df.item.unique(),\n",
-    "                    value=\"Barley\",\n",
-    "                )),\n",
-    "                dbc.Col(\n",
-    "                dcc.Dropdown(\n",
-    "                    id=\"stats-metric\",\n",
-    "                    options=['Area Harvested', 'Production', 'Yield'],\n",
-    "                    value=\"Production\",\n",
-    "                )),\n",
-    "                dbc.Col(\n",
-    "                dcc.Dropdown(\n",
-    "                    id=\"stats-year\",\n",
-    "                    options=crop_df.year.unique(),\n",
-    "                    value=1961,\n",
-    "                )),\n",
-    "            ]),\n",
-    "            html.Div(id=\"stats-result\"),\n",
     "        ]),\n",
     "    ]),\n",
     "    # Per country percentiles\n",
@@ -466,6 +582,39 @@
     "            dcc.Graph(id=\"bar-graph\"),\n",
     "        ]),\n",
     "    ]),\n",
+    "    # Predictions\n",
+    "    dbc.Card([   \n",
+    "        html.H3(\n",
+    "            children=\"Future Esitmates\",\n",
+    "            className=\"main_title\",\n",
+    "        ),\n",
+    "        dbc.Row([ \n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"item\",\n",
+    "                options=utils.TOP_IRISH_CROPS_PRODUCTION,\n",
+    "                value=\"Barley\",\n",
+    "            )),\n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"metric\",\n",
+    "                options=['Yield', 'Production'],\n",
+    "                value=\"Production\",\n",
+    "            )),\n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"area\",\n",
+    "                options=crop_df.area.unique(),\n",
+    "                value=\"Ireland\",\n",
+    "            )),\n",
+    "        ]),\n",
+    "        dbc.Row(\n",
+    "            dcc.RangeSlider(2022, 2050, 1, \n",
+    "                value=[2022, 2027], \n",
+    "                marks={i: '{}'.format(i) for i in range(2022, 2050)},\n",
+    "                id='predict')),\n",
+    "        dcc.Graph(id=\"prediction-graph\"),\n",
+    "    ]),\n",
     "], style={'background': 'white', 'height': '100vh'})\n",
     "\n",
     "\n",
@@ -474,32 +623,7 @@
     "    Input(\"crop\", \"value\"),\n",
     "    Input(\"metric\", \"value\"))\n",
     "def update_map(crop, metric):\n",
-    "    data = crop_df[crop_df.item == crop]\n",
-    "   \n",
-    "    fig = px.choropleth(data,\n",
-    "        locations='Code',\n",
-    "        color=metric,\n",
-    "        animation_frame=\"year\",\n",
-    "        hover_name='area'\n",
-    "    )\n",
-    "    \n",
-    "    fig.update_layout(\n",
-    "        title=dict(\n",
-    "            text='Crops',\n",
-    "            x=.5,\n",
-    "            font_size=18,\n",
-    "            ),\n",
-    "    \n",
-    "        geo=dict(bgcolor='#8ad6ff', lakecolor='#8ad6ff', projection_type='miller', scope='europe'),\n",
-    "        \n",
-    "        width = 500,\n",
-    "        height = 500,\n",
-    "        coloraxis=dict(colorscale=\"Reds\", cmin=data[metric].min(), cmax=data[metric].max())\n",
-    "    )\n",
-    "\n",
-    "    fig.layout.updatemenus[0].buttons[0].args[1][\"frame\"][\"duration\"] = 60\n",
-    "\n",
-    "    return fig\n",
+    "    return create_map(crop_df, crop, metric)\n",
     "\n",
     "@app.callback(\n",
     "    Output(\"stats-result\", \"children\"), \n",
@@ -507,8 +631,7 @@
     "    Input(\"stats-area2\", \"value\"),\n",
     "    Input(\"stats-crop\", \"value\"),\n",
     "    Input(\"stats-metric\", \"value\"),\n",
-    "    Input(\"stats-year\", \"value\"),\n",
-    ")\n",
+    "    Input(\"stats-year\", \"value\"))\n",
     "def update_line_chart(area1, area2, crop, metric, year):\n",
     "    X1 = filter_df(fao_raw_percentiles_df, crop, metric, area1, year)\n",
     "    X2 = filter_df(fao_raw_percentiles_df, crop, metric, area2, year)\n",
@@ -526,6 +649,17 @@
     "    data=fao_raw_percentiles_df[(fao_raw_percentiles_df.value > 0.0) & (fao_raw_percentiles_df.unit == 't') & (fao_raw_percentiles_df.area == area) & (fao_raw_percentiles_df.percentile == percentile)]\n",
     "    return (px.line(data, x=\"year\", y=\"value\", color='item', title=f\"{percentile} Crops Production in {area}\"), \n",
     "            px.bar(data, x=\"year\", y=\"value\", color=\"item\", title=f\"{percentile} Crops Production in {area}\"))\n",
+    "\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(\"prediction-graph\", \"figure\"),\n",
+    "    Input(\"item\", \"value\"),\n",
+    "    Input(\"metric\", \"value\"),\n",
+    "    Input(\"area\", \"value\"),\n",
+    "    Input(\"predict\", \"value\"),\n",
+    "    )\n",
+    "def update_prediction_chart(item, metric, area, predict):\n",
+    "    return predict_and_graph(crop_df, item, metric, area, predict)\n",
     "\n",
     "\n",
     "app.run_server(debug=True, port=PORT)"
