--- a/ca2-sem1/dashboards.ipynb
+++ b/ca2-sem1/dashboards.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,21 +363,15 @@
     "        locations='Code',\n",
     "        color=metric,\n",
     "        animation_frame=\"year\",\n",
-    "        hover_name='area'\n",
+    "        hover_name='area',\n",
+    "        color_continuous_scale=px.colors.sequential.Darkmint,\n",
+    "        scope='europe'\n",
     "    )\n",
     "    \n",
     "    fig.update_layout(\n",
-    "        title=dict(\n",
-    "            text='Crops',\n",
-    "            x=.5,\n",
-    "            font_size=18,\n",
-    "            ),\n",
-    "    \n",
-    "        geo=dict(bgcolor='#8ad6ff', lakecolor='#8ad6ff', projection_type='miller', scope='europe'),\n",
-    "        \n",
-    "        width = 500,\n",
-    "        height = 500,\n",
-    "        coloraxis=dict(colorscale=\"Reds\", cmin=data[metric].min(), cmax=data[metric].max())\n",
+    "        title=dict(text='Crops', x=.5, font_size=18),        \n",
+    "        width = 800, height = 800,\n",
+    "        coloraxis=dict(cmin=data[metric].min(), cmax=data[metric].max())\n",
     "    )\n",
     "\n",
     "    fig.layout.updatemenus[0].buttons[0].args[1][\"frame\"][\"duration\"] = 60\n",
@@ -452,17 +446,160 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://dash-bootstrap-components.opensource.faculty.ai/docs/components/card/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The project uses Dash Bootstrap components, where Card, CardBody, and other non-standard Dash concepts come from\n",
+    "# The Dash app is broken down into different cards, and the cards are declared outside of the Dash app, just like some of the\n",
+    "# utility functions extracted out in the cell above.\n",
+    "# This reduces code complexity and improves readability.\n",
+    "\n",
+    "# Uses for cholopleth graph and inputs for that graph\n",
+    "map_card =  dbc.Card(\n",
+    "    dbc.CardBody([  \n",
+    "                html.H3(\n",
+    "                    children=\"EU-wide performance for selected crop & metric\",\n",
+    "                    className=\"main_title\",\n",
+    "                ),\n",
+    "                dcc.Dropdown(\n",
+    "                    id=\"geo-crop\",\n",
+    "                    options=crop_df.item.unique(),\n",
+    "                    value=\"Barley\",\n",
+    "                ),\n",
+    "                dcc.Dropdown(\n",
+    "                    id=\"geo-metric\",\n",
+    "                    options=['Area Harvested', 'Production', 'Yield'],\n",
+    "                    value=\"Production\",\n",
+    "                ),\n",
+    "                dcc.Graph(id=\"crop-eu-map\"),\n",
+    "            ]), className=\"w-75 mb-3\"\n",
+    "    )\n",
+    "\n",
+    "# Uses for statistical comparison. Some inputs (crop aka item & country aka area) will be taken from the Map Card dropdowns\n",
+    "stats_card = dbc.Card(\n",
+    "    dbc.CardBody([  \n",
+    "            # Stats dropdowns & Graphs\n",
+    "            html.H3(\n",
+    "                children=\"Statistical Testing\",\n",
+    "                className=\"main_title\",\n",
+    "            ),\n",
+    "            html.P(\n",
+    "                \"Compare 2 countries for whether their chosen metric is the same the same for the chosen crop\",\n",
+    "                className=\"card-text\",\n",
+    "            ),\n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"stats-area1\",\n",
+    "                options=crop_df.area.unique(),\n",
+    "                value=\"Ireland\",\n",
+    "            )),\n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"stats-area2\",\n",
+    "                options=crop_df.area.unique(),\n",
+    "                value=\"Sweden\",\n",
+    "            )),\n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"stats-year\",\n",
+    "                options=crop_df.year.unique(),\n",
+    "                value=1961,\n",
+    "            )),\n",
+    "            dbc.Card(\n",
+    "                dbc.CardBody([\n",
+    "                html.H5(\"Result\", className=\"card-title\"),\n",
+    "                html.Div(id=\"stats-result\"),\n",
+    "            ]), color=\"light\", outline=True),\n",
+    "        ]), className=\"w-25 mb-3\"\n",
+    "    )\n",
+    "\n",
+    "country_explore_percentiles_card = dbc.Card(\n",
+    "    dbc.CardBody([  \n",
+    "        html.H3(\n",
+    "                children=\"All Crops Production for a specifid country\",\n",
+    "                className=\"main_title\",\n",
+    "            ),\n",
+    "        dbc.Row([\n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"explorer-area1\",\n",
+    "                options=fao_raw_percentiles_df.area.unique(),\n",
+    "                value=\"Ireland\",\n",
+    "            )),\n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"explorer-area2\",\n",
+    "                options=fao_raw_percentiles_df.area.unique(),\n",
+    "                value=\"Sweden\",\n",
+    "            )),\n",
+    "            dbc.Col(\n",
+    "            dbc.RadioItems(\n",
+    "                utils.PERCENTILE_LABELS,\n",
+    "                utils.PERCENTILE_LABELS[-1],\n",
+    "                id=\"explorer-percentile\",\n",
+    "                inline=True,\n",
+    "            )),\n",
+    "        ], className=\"g-0 d-flex align-items-center\"),\n",
+    "        dbc.Row([\n",
+    "            dbc.Row([\n",
+    "            dcc.Graph(id=\"pie-graph\"),\n",
+    "            dcc.Slider(1961, 2022, 1, value=2022, id='explorer-slider', marks={year: \"'\" + str(year)[2:] for year in range(1961, 2023)}, included=False)]),\n",
+    "            dbc.Row(\n",
+    "            dcc.Graph(id=\"bar-graph\")),\n",
+    "        ]),\n",
+    "    ]), className=\"w-100 mb-3\"\n",
+    ")\n",
+    "\n",
+    "# Draw up available data AND predicted data for a particular crop & country\n",
+    "predictions_card = dbc.Card(\n",
+    "    dbc.CardBody([  \n",
+    "        html.H3(\n",
+    "            children=\"Future Esitmates\",\n",
+    "            className=\"main_title\",\n",
+    "        ),\n",
+    "        dbc.Row([ \n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"predictions-item\",\n",
+    "                options=utils.TOP_IRISH_CROPS_PRODUCTION,\n",
+    "                value=\"Barley\",\n",
+    "            )),\n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"predictions-metric\",\n",
+    "                options=['Yield', 'Production'],\n",
+    "                value=\"Production\",\n",
+    "            )),\n",
+    "            dbc.Col(\n",
+    "            dcc.Dropdown(\n",
+    "                id=\"predictions-area\",\n",
+    "                options=crop_df.area.unique(),\n",
+    "                value=\"Ireland\",\n",
+    "            )),\n",
+    "        ], className=\"g-0 d-flex align-items-center\"),\n",
+    "        dbc.Row(\n",
+    "            dcc.RangeSlider(2022, 2050, 1, \n",
+    "                value=[2022, 2027], \n",
+    "                marks={i: '{}'.format(i) for i in range(2022, 2050)},\n",
+    "                id='predictions-year')),\n",
+    "        dcc.Graph(id=\"prediction-graph\"),\n",
+    "    ]),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------------------------------------------------\n",
-      "DuplicateIdError                          Traceback (most recent call last)\n",
-      "DuplicateIdError: Duplicate component id found in the initial layout: `metric`\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -478,7 +615,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x12c116810>"
+       "<IPython.lib.display.IFrame at 0x126b010d0>"
       ]
      },
      "metadata": {},
@@ -488,175 +625,80 @@
    "source": [
     "PORT = 8078\n",
     "\n",
-    "# Some bootstrap CSS \n",
+    "# bootstrap CSS \n",
     "app = Dash(__name__, external_stylesheets=[dbc.themes.ZEPHYR])\n",
     "\n",
     "app.layout = dbc.Container([\n",
-    "    # Geoplot dropdows & graph\n",
-    "    dbc.Card([  \n",
-    "        dbc.Row([\n",
-    "            dbc.Col([\n",
-    "                html.H3(\n",
-    "                    children=\"EU-wide performance for selected crop & metric\",\n",
-    "                    className=\"main_title\",\n",
-    "                ),\n",
-    "                dbc.Card([\n",
-    "                    dcc.Dropdown(\n",
-    "                        id=\"crop\",\n",
-    "                        options=crop_df.item.unique(),\n",
-    "                        value=\"Barley\",\n",
-    "                    ),\n",
-    "                    dcc.Dropdown(\n",
-    "                        id=\"metric\",\n",
-    "                        options=['Area Harvested', 'Production', 'Yield'],\n",
-    "                        value=\"Production\",\n",
-    "                    ),\n",
-    "                ]),\n",
-    "                dcc.Graph(id=\"crop-eu-map\"),\n",
+    "    dbc.Row([\n",
+    "              map_card, \n",
+    "              stats_card,\n",
     "            ]),\n",
-    "            # Stats dropdowns & Graphs\n",
-    "            dbc.Col([   \n",
-    "                html.H3(\n",
-    "                    children=\"Statistical testing for differences between crop results in EU countries\",\n",
-    "                    className=\"main_title\",\n",
-    "                ),\n",
-    "                dbc.Row([ \n",
-    "                    dbc.Col(\n",
-    "                    dcc.Dropdown(\n",
-    "                        id=\"stats-area1\",\n",
-    "                        options=crop_df.area.unique(),\n",
-    "                        value=\"Ireland\",\n",
-    "                    )),\n",
-    "                    dbc.Col(\n",
-    "                    dcc.Dropdown(\n",
-    "                        id=\"stats-area2\",\n",
-    "                        options=crop_df.area.unique(),\n",
-    "                        value=\"Sweden\",\n",
-    "                    )),\n",
-    "                    dbc.Col(\n",
-    "                    dcc.Dropdown(\n",
-    "                        id=\"stats-crop\",\n",
-    "                        options=crop_df.item.unique(),\n",
-    "                        value=\"Barley\",\n",
-    "                    )),\n",
-    "                    dbc.Col(\n",
-    "                    dcc.Dropdown(\n",
-    "                        id=\"stats-metric\",\n",
-    "                        options=['Area Harvested', 'Production', 'Yield'],\n",
-    "                        value=\"Production\",\n",
-    "                    )),\n",
-    "                    dbc.Col(\n",
-    "                    dcc.Dropdown(\n",
-    "                        id=\"stats-year\",\n",
-    "                        options=crop_df.year.unique(),\n",
-    "                        value=1961,\n",
-    "                    )),\n",
-    "                ]),\n",
-    "                html.Div(id=\"stats-result\"),\n",
-    "            ]),\n",
-    "        ]),\n",
-    "    ]),\n",
-    "    # Per country percentiles\n",
-    "    dbc.Card([ \n",
-    "        dbc.Row([\n",
-    "            html.H3(\n",
-    "                children=\"All Crops Production for a specifid country\",\n",
-    "                className=\"main_title\",\n",
-    "            ),\n",
-    "            dbc.Row([\n",
-    "                dbc.Col(\n",
-    "                dcc.Dropdown(\n",
-    "                    id=\"area\",\n",
-    "                    options=fao_raw_percentiles_df.area.unique(),\n",
-    "                    value=\"Ireland\",\n",
-    "                )),\n",
-    "                dbc.Col(\n",
-    "                dcc.RadioItems(\n",
-    "                    utils.PERCENTILE_LABELS,\n",
-    "                    utils.PERCENTILE_LABELS[-1],\n",
-    "                    id=\"percentile\",\n",
-    "                    inline=True,\n",
-    "                )),\n",
-    "            ]),\n",
-    "            dcc.Graph(id=\"line-graph\"),\n",
-    "            dcc.Graph(id=\"bar-graph\"),\n",
-    "        ]),\n",
-    "    ]),\n",
-    "    # Predictions\n",
-    "    dbc.Card([   \n",
-    "        html.H3(\n",
-    "            children=\"Future Esitmates\",\n",
-    "            className=\"main_title\",\n",
-    "        ),\n",
-    "        dbc.Row([ \n",
-    "            dbc.Col(\n",
-    "            dcc.Dropdown(\n",
-    "                id=\"item\",\n",
-    "                options=utils.TOP_IRISH_CROPS_PRODUCTION,\n",
-    "                value=\"Barley\",\n",
-    "            )),\n",
-    "            dbc.Col(\n",
-    "            dcc.Dropdown(\n",
-    "                id=\"metric\",\n",
-    "                options=['Yield', 'Production'],\n",
-    "                value=\"Production\",\n",
-    "            )),\n",
-    "            dbc.Col(\n",
-    "            dcc.Dropdown(\n",
-    "                id=\"area\",\n",
-    "                options=crop_df.area.unique(),\n",
-    "                value=\"Ireland\",\n",
-    "            )),\n",
-    "        ]),\n",
-    "        dbc.Row(\n",
-    "            dcc.RangeSlider(2022, 2050, 1, \n",
-    "                value=[2022, 2027], \n",
-    "                marks={i: '{}'.format(i) for i in range(2022, 2050)},\n",
-    "                id='predict')),\n",
-    "        dcc.Graph(id=\"prediction-graph\"),\n",
-    "    ]),\n",
-    "], style={'background': 'white', 'height': '100vh'})\n",
+    "    country_explore_percentiles_card,\n",
+    "    predictions_card,\n",
+    "], style={'background': 'white'})\n",
     "\n",
     "\n",
     "@app.callback(\n",
     "    Output(\"crop-eu-map\", \"figure\"), \n",
-    "    Input(\"crop\", \"value\"),\n",
-    "    Input(\"metric\", \"value\"))\n",
+    "    Input(\"geo-crop\", \"value\"),\n",
+    "    Input(\"geo-metric\", \"value\"))\n",
     "def update_map(crop, metric):\n",
     "    return create_map(crop_df, crop, metric)\n",
+    "\n",
     "\n",
     "@app.callback(\n",
     "    Output(\"stats-result\", \"children\"), \n",
     "    Input(\"stats-area1\", \"value\"),\n",
     "    Input(\"stats-area2\", \"value\"),\n",
-    "    Input(\"stats-crop\", \"value\"),\n",
-    "    Input(\"stats-metric\", \"value\"),\n",
+    "    Input(\"geo-crop\", \"value\"),    # comes from geo selection to make the dahsboard more coherent\n",
+    "    Input(\"geo-metric\", \"value\"),  # comes from geo selection to make the dahsboard more coherent\n",
     "    Input(\"stats-year\", \"value\"))\n",
-    "def update_line_chart(area1, area2, crop, metric, year):\n",
+    "def update_stats(area1, area2, crop, metric, year):\n",
+    "    result = \"**differences**\"\n",
+    "    msg = f\"With a 5% significance level, there is enough evidence to say that there are {result} between {area1} and {area2} production of {crop} as observed from year {year} until 2022.\"\n",
+    "    \n",
     "    X1 = filter_df(fao_raw_percentiles_df, crop, metric, area1, year)\n",
     "    X2 = filter_df(fao_raw_percentiles_df, crop, metric, area2, year)\n",
     "\n",
-    "    t_test_barley = stats.ttest_ind(X1.value, X2.value, equal_var = False)\n",
-    "    return str(t_test_barley)\n",
+    "    t_test = stats.ttest_ind(X1.value, X2.value, equal_var = False)\n",
+    "    alpha = 0.05\n",
+    "    \n",
+    "    if t_test.pvalue >= alpha:\n",
+    "        result = \"**no differences**\"\n",
+    "        return msg\n",
+    "    \n",
+    "    return msg\n",
     "\n",
     "\n",
     "@app.callback([\n",
-    "    Output(\"line-graph\", \"figure\"), \n",
+    "    Output(\"pie-graph\", \"figure\"), \n",
     "    Output(\"bar-graph\", \"figure\")], \n",
-    "    Input(\"percentile\", \"value\"),\n",
-    "    Input(\"area\", \"value\"))\n",
-    "def update_line_chart(percentile, area):\n",
-    "    data=fao_raw_percentiles_df[(fao_raw_percentiles_df.value > 0.0) & (fao_raw_percentiles_df.unit == 't') & (fao_raw_percentiles_df.area == area) & (fao_raw_percentiles_df.percentile == percentile)]\n",
-    "    return (px.line(data, x=\"year\", y=\"value\", color='item', title=f\"{percentile} Crops Production in {area}\"), \n",
-    "            px.bar(data, x=\"year\", y=\"value\", color=\"item\", title=f\"{percentile} Crops Production in {area}\"))\n",
+    "    Input(\"explorer-percentile\", \"value\"),\n",
+    "    Input(\"explorer-area1\", \"value\"),\n",
+    "    Input(\"explorer-area2\", \"value\"),\n",
+    "    Input(\"explorer-slider\", \"value\"),\n",
+    "    )\n",
+    "def update_percentile_charts(percentile, area1, area2, slider):\n",
+    "    data=fao_raw_percentiles_df[(fao_raw_percentiles_df.value > 0.0) & (fao_raw_percentiles_df.unit == 't') & (fao_raw_percentiles_df.area.isin([area1, area2])) & (fao_raw_percentiles_df.percentile == percentile)]\n",
+    "    \n",
+    "    pie = px.pie(data[data.year == slider], values='value', names='item', facet_col='area',\n",
+    "                 title=f\"{area1} & {area2} crops in {percentile} percentile for year {slider}\")\n",
+    "    pie.update_traces(textposition='inside', textinfo='percent+label', hole=0.4)\n",
+    "    pie.update_layout(showlegend=False)\n",
+    "\n",
+    "    bar = px.bar(data, x=\"year\", y=\"value\", color=\"item\", facet_col='area',\n",
+    "                  title=f\"{area1} & {area2} crops in {percentile} percentile year over year since 1961\")\n",
+    "    bar.update_layout(showlegend=False)\n",
+    "\n",
+    "    return pie, bar\n",
     "\n",
     "\n",
     "@app.callback(\n",
     "    Output(\"prediction-graph\", \"figure\"),\n",
-    "    Input(\"item\", \"value\"),\n",
-    "    Input(\"metric\", \"value\"),\n",
-    "    Input(\"area\", \"value\"),\n",
-    "    Input(\"predict\", \"value\"),\n",
+    "    Input(\"predictions-item\", \"value\"),\n",
+    "    Input(\"predictions-metric\", \"value\"),\n",
+    "    Input(\"predictions-area\", \"value\"),\n",
+    "    Input(\"predictions-year\", \"value\"),\n",
     "    )\n",
     "def update_prediction_chart(item, metric, area, predict):\n",
     "    return predict_and_graph(crop_df, item, metric, area, predict)\n",
